2004-12-17  Carl Worth  <cworth@cworth.org>

	* test/cairo_test.c (cairo_test): Fix to find reference images in
	local directory when run directly, (rather than by "make check").

	* BUGS: Add bug about invalidating font caches.

2004-12-02  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_gstate.c (_cairo_gstate_clip): Revert the "return early"
	change so that rectangular clipping works with backends that
	don't support clipping regions.

2004-11-29  Carl Worth  <cworth@cworth.org>

	* COPYING: Fix typo: LPGL->LGPL.

	* src/cairo_ps_surface.c (cairo_ps_surface_create): Remove
	unintentional copyright statement from user-generated output
	image.

2004-11-23  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (XFAIL_TESTS): Note that text_cache_crash is
	expected to fail.

	* test/text_cache_crash.c (draw): Add test to demonstrate bug when
	item is too big for cache.

	* src/cairo_cache.c (_cache_sane_state): Really remove that
	refcount assertion this time.

	* test/text_cache_crash.c: Add note that bug has been fixed.
	(main): Instrumentation code for testing cache destruction.

	* test/cairo_test.c (cairo_test): Support tests that produce no
	output, (don't check image if (width,height) == (0,0)).

	* src/cairoint.h: Add #include <assert.h> here rather than in
	multiple .c files.

	* src/cairo_cache.c: Add const qualifier to static
	cache_arrangements table.
	(_cache_sane_state): Remove refcount assertion as it it false
	during the cairo_cache_destroy.
	(_cache_sane_state): #include <assert.h> moved up to cairoint.h
	(_entry_destroy): Fix bug in assertion (used_memory >=
	entry->memory), not >.
	(_cairo_cache_destroy): Fix timing of refcount decrement so that
	the destroy function actually works.

2004-11-14  Carl Worth  <cworth@cworth.org>

	* src/cairo_gstate.c (_cairo_gstate_select_font): Don't destroy a
	NULL font.

2004-11-13  Carl Worth  <cworth@cworth.org>

	* src/cairo_gstate.c (_cairo_gstate_select_font): Unconditionally